Updated redesign branch with main
